ugc-storage-main

--- a/2fa-email.html
+++ b/2fa-email.html
@@ -51,7 +51,7 @@
       ">
         <!-- top icon -->
         <div style="padding: 20px">
-            <img src="https://ugc-storage.s3.eu-north-1.amazonaws.com/img+(1).png" alt="Logo" style="display:block"
+            <img src="https://ugc-storage-main.s3.eu-north-1.amazonaws.com/img+(1).png" alt="Logo" style="display:block"
                 width="115" height="32" />
 
         </div>
