--- a/registration-confirmation-2.html
+++ b/registration-confirmation-2.html
@@ -37,7 +37,7 @@
       ">
     <!-- top icon -->
     <div style="padding: 20px">
-      <img src="https://ugc-storage.s3.eu-north-1.amazonaws.com/img+(1).png" alt="Logo" style="display:block" width="115" height="32" />
+      <img src="https://ugc-storage-main.s3.eu-north-1.amazonaws.com/img+(1).png" alt="Logo" style="display:block" width="115" height="32" />
 
       <!-- <svg width="115" height="32" viewBox="0 0 115 32" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path fill-rule="evenodd" clip-rule="evenodd"
